src/pages/cards/searchRoom.scss
.card__date {
    display: flex;
    justify-content: space-between;

    & .input__container {
        width: 150px;
        max-height: 44px;
        
    }
    & .input__container input {
        width: 20%;
        flex-grow: 1;
    }

    
}
.card__guests .input__container {
    position: relative;
    width: 320px;

}



.guest__counter {
    display: none; 
    z-index: 2;
    position: sticky;
    // top: 412px;
    // width: 320px;
    padding: 7px 7px 13px 15px;
    background-color: #fff;
    border: 1px solid rgba(31, 32, 65, 0.5);
    border-radius: 0 0 5px 5px;

    .apply__buttons {
        display: flex;
        justify-content: space-between;
        margin-top: 19px;
        & h3{
            color: rgba(188, 156, 255, 1);
            cursor: pointer;
            &:active {
            color: rgba(31, 32, 65, 0.5)
            }
        }
        & .button__refresh {
            visibility: hidden;
        }
    }

    


}

.guest__counter .active {
    display: flex;
}

.counter__cell {
    display: flex;
    justify-content: space-between;
    & .counter__controller {
        display: flex;
        margin-bottom: 7px;
        & input {
            box-sizing: content-box;
            border: none;
            outline: none;
            width: 32px;
            font-weight: 700;
            font-size: 12px;
            text-align: center;
        }

        & button {
            width: 30px;
            height: 30px;
            border: 1px solid rgba(31, 32, 65, 0.25);
            border-radius: 50%;
        }
    }
}

